[tool.poetry]
name = "dodgeball-server-sdk"
version = "0.1.0"
description = ""
authors = ["Andrew Schwartz sdk@dodgeballhq.com"]
readme = "README.md"
packages = [{include = "dodgeball"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
requests = "^2.29.0"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
aiohttp-cors = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
